@@ -1,6 +1,8 @@
 ===v7.2.0===
  * Combat Event icons can now be group controllers, filling up a group with each event captured.
  * Buff/Debuff icons can now explicity set which variable they want to look at for the "Show variable text" option.
+ * All icons are now hidden when you are at the barber shop.
+ * The combo point condition now only checks your target (so you can't try to check "player", which doesn't work).
 
 ====Bug Fixes====
  * Fixed range checking for multiple icon types (notably Multistate cooldowns, but also others).
